# voterfile

./: .gitignore  README.md  pyproject.toml  shp_to_kml.py  turnout.ipynb
voters/: ingest.py
